<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_englishalert"
    android:layout_height="match_parent"
    tools:context=".activity.ExerciseActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserratbold"
            android:text="Latihan"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exercises Test"
            android:fontFamily="@font/montserratbold"
            android:textSize="24sp"
            android:textColor="#424242"
            android:layout_marginLeft="30dp"/>

        <LinearLayout
            android:id="@+id/goto_quiz"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/background_blue"
            android:layout_marginHorizontal="28dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level1"
                android:textColor="#FEFEFE"
                android:fontFamily="@font/montserratbold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="Greeting, Noun, and Pronoun."
                android:fontFamily="@font/montserratregular"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="openSnackbar"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/background_red"
            android:layout_marginHorizontal="28dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level2"
                android:textColor="#FEFEFE"
                android:fontFamily="@font/montserratbold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="Verb, Simple Present Tense, Showing Gratitude."
                android:fontFamily="@font/montserratregular"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="openSnackbar"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/background_magenta"
            android:layout_marginHorizontal="28dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level3"
                android:textColor="#FEFEFE"
                android:fontFamily="@font/montserratbold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="Adjective, Simple Continous Tense, Apologize to Other."
                android:fontFamily="@font/montserratregular"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>