<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_englishalert"
    android:layout_height="match_parent"
    tools:context=".activity.MaterialActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserratbold"
            android:text="Materi"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Materials Course"
            android:fontFamily="@font/montserratbold"
            android:textSize="24sp"
            android:textColor="#424242"
            android:layout_marginLeft="30dp"/>

        <LinearLayout
            android:id="@+id/sparkling_newcomer"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:cardElevation="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginVertical="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sparkling"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:textSize="14sp"
                    android:text="@string/level1"
                    android:fontFamily="@font/montserratbold"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Greeting, Noun, and Pronoun."
                    android:fontFamily="@font/montserratregular"
                    android:textSize="12sp"
                    android:textColor="#797979"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:onClick="openSnackbar"
            android:id="@+id/curious_learner"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                app:cardElevation="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginVertical="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/curious"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:textSize="14sp"
                    android:text="@string/level2"
                    android:fontFamily="@font/montserratbold"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="Verb, Simple Present Tense, Showing Gratitude."
                    android:fontFamily="@font/montserratregular"
                    android:textSize="12sp"
                    android:textColor="#797979"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:onClick="openSnackbar"
            android:id="@+id/ambitious_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                app:cardElevation="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginVertical="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ambitious"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:textSize="14sp"
                    android:text="@string/level3"
                    android:fontFamily="@font/montserratbold"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="Adjective, Simple Continous Tense, Apologize to Other"
                    android:fontFamily="@font/montserratregular"
                    android:textSize="12sp"
                    android:textColor="#797979"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>