<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_englishalert"
    android:layout_height="match_parent"
    tools:context=".activity.FaqActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserratbold"
            android:text="Pertanyaan Umum"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:paddingStart="25dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingEnd="18dp"
            android:background="@drawable/background_white"
            android:elevation="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apa itu EnglishAlert?"
                android:fontFamily="@font/montserratbold"
                android:textSize="12sp"
                android:textColor="#424242"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_faq1"
                android:textSize="11sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="#797979"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="115dp"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingEnd="18dp"
            android:background="@drawable/background_white"
            android:elevation="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mengapa memilih belajar di EnglishAlert?"
                android:fontFamily="@font/montserratbold"
                android:textSize="12sp"
                android:textColor="#424242"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_faq2"
                android:textSize="11sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="#797979"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="125dp"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingEnd="18dp"
            android:background="@drawable/background_white"
            android:elevation="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apa alasan mengembangkan EnglishAlert?"
                android:fontFamily="@font/montserratbold"
                android:textSize="12sp"
                android:textColor="#424242"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_faq3"
                android:textSize="11sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="#797979"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="125dp"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingEnd="18dp"
            android:background="@drawable/background_white"
            android:elevation="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sumber Pengembangan"
                android:fontFamily="@font/montserratbold"
                android:textSize="12sp"
                android:textColor="#424242"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Icon dari"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="12sp"
                        android:textColor="#797979"/>

                    <TextView
                        android:id="@+id/flaticon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Flaticon"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="12sp"
                        android:textColor="#3CC842"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserratregular"
                        android:text="Illustrasi dari"
                        android:textColor="#797979"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/manypixels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ManyPixels"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="12sp"
                        android:textColor="#012169"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Animasi dari"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="12sp"
                        android:textColor="#797979"/>

                    <TextView
                        android:id="@+id/lottiefiles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LottieFiles"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="12sp"
                        android:textColor="#0BB9D0"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tipografi dari"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="12sp"
                        android:textColor="#797979"/>

                    <TextView
                        android:id="@+id/googlefonts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Google Fonts"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="12sp"
                        android:textColor="#D00B46"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>